# llm-proxy-py

./: .gitignore  CLAUDE-CODE-SETUP.md  CLAUDE.md  PLAN.md  README.md  TESTING.md  config.claude-code-ollama.yaml  config.example.yaml  pyproject.toml
src/llm_proxy_py/: __init__.py
src/llm_router/: __init__.py  config.py  main.py  models.py
src/llm_router/clients/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/llm_router/middleware/: __init__.py  headers.py  logging.py  transform.py
src/llm_router/routers/: anthropic.py  openai.py
src/llm_router/utils/: __init__.py  retry.py  streaming.py
